--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,5 +23,11 @@ services:
       - '.:/app'
       - 'gems:/gems'
 
+  mailcatcher:
+    image: tophfr/mailcatcher
+    ports:
+      - '1080:80'
+      - '1025:25'
+
 volumes:
   gems:
